<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Perfil"    >

    <item
        android:id="@+id/clases"
        android:title="@string/menu_activity_1"
        android:icon="@android:drawable/ic_menu_today"
        android:orderInCategory="1"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/explorar"
        android:title="@string/menu_activity_2"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="2"
        app:showAsAction="always"
        />



    <item android:id="@+id/informacion"
        android:title="@string/menu_activity_5"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never"
        android:orderInCategory="5"
        />


</menu>