<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/InfoScreen"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/fondo"
    tools:layout_editor_absoluteY="81dp"     >


    <LinearLayout
        android:layout_width="254dp"
        android:layout_height="254dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtInfoTitulo"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/titulo_info"
            android:textSize="@dimen/texto_titulo" />

        <TextView
            android:id="@+id/txtInfo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/des_info_1" />

        <TextView
            android:id="@+id/txtInfo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/des_info_2" />

        <RatingBar
            android:id="@+id/ratingBar3"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:numStars="5"
            android:rating="5" />

        <ImageView
            android:id="@+id/imgInfo"
            android:layout_width="@dimen/maxWidh"
            android:layout_height="86dp"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:srcCompat="@drawable/bailarinar" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>